firstphase beautifying. Done for now

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="main">
         <div class="title"><h2>Sketch an Etch</h2></div>
         <div class="board"></div>
-    </div>
+    
     <div class="buttons">
         <button class="Black" onClick="backInBlack()">Black</button>
         <button class="Rainbow" onClick="rainbowOn()">Rainbow</button>
@@ -25,6 +25,10 @@
         <input type="text" class="resizenum" id="rn" size="2">
         <button class="resizebtn" onClick="resizeGrid(document.getElementById('rn').value)" >Resize</button>
         <error class="resize_err"></error>
+    </div>
+    </div>
+    <div class="footers">
+    <footer><a href="https://github.com/harrisfoes" target="_blank"><img src="github-mark.png">Made by harrisfoes </a></footer>
     </div>
 
 
